# cmake_format

./: .clang-format  .cmake-format.py  .eslintrc.js  .flake8  .gitignore  .pep8  .pre-commit-hooks.yaml  .readthedocs.yml  .sparse-export  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  README.rst  apt-requirements.txt  cmake_format.py  cmake_format.yaml  go-requirements.txt  pip-requirements.txt  pylintrc  pylintrc.txt  requirements.txt  setup.py  tests_requirements.txt
bazel/: WORKSPACE.bionic  WORKSPACE.xenial  rules.bzl  system-bionic.bzl  system-xenial.bzl
build_tooling/: lint-excludes.txt
build_tooling/bazel/: WORKSPACE.bionic  WORKSPACE.xenial  rules.bzl  system.bzl  (+3 more)
cmake/: codestyle.cmake  ctest_helpers.cmake  debian.cmake  doctools.cmake  environment.cmake  lint-excludes.txt  package.json  pkgconfig.cmake  validate_lint_manifest.py  wrappers.cmake
cmake_format/: BUILD  CMakeLists.txt  __init__.py  __main__.py  annotate.py  commands.py  common.py  config_util.py  configuration.py  ctest-to.py  ctest_to.py  format_tests.py  formatter.py  genparsers.py  invocation_tests.py  layout_tests.py  lexer.py  lexer_tests.py  markup.py  markup_tests.py  parse_funs.py  parser.py  parser_tests.py  render.py  screw_users_test.py  tests.py
cmake_format/.sub/: sparse-checkout  travis.yml
cmake_format/command_tests/: BUILD  CMakeLists.txt  __init__.py  __main__.py  add_custom_command_tests.cmake  add_custom_command_tests.py  add_executable_tests.py  add_library_tests.cmake  add_library_tests.py  comment_tests.cmake  conditional_tests.cmake  conditional_tests.py  custom_command_tests.cmake  export_tests.cmake  export_tests.py  file_tests.cmake  file_tests.py  install_tests.cmake  install_tests.py  misc_tests.cmake  misc_tests.py  partialmethod.py  set_target_properties_tests.cmake  set_tests.cmake  set_tests.py
cmake_format/contrib/: BUILD  CMakeLists.txt  individual_ca.txt  signature_db.json  validate_database.py  validate_pullrequest.py
cmake_format/doc/: BUILD  CMakeLists.txt  MANIFEST.in  README.rst  case_studies.rst  changelog.rst  cmake-annotate.rst  cmake-format.rst  cmake-lint.rst  conf.py  configopts.rst  configuration.rst  contributing.rst  ctest-to.rst  docsources_test.py  example.rst  example_rendered.html  features.rst  format-usage.rst  format_algorithm.rst  gendoc_sources.py  index.rst  installation.rst  lint-example.rst  lint-implemented.rst  lint-inline.rst  lint-summary.rst  lint-todo.rst  lint-usage.rst  modules.rst  parse-automatic.rst  parse-tree.rst  parse_tree.rst  release_notes.rst  release_process.rst  render_html.rst  requirements.txt  rtd-requirements.txt.in  todo.rst  update_readme.py  (+1 more)
cmake_format/parse/: __init__.py  additional_nodes.py  argument_nodes.py  body_nodes.py  common.py  printer.py  properties.py  simple_nodes.py  statement_node.py  util.py  variables.py
cmake_format/parse_funs/: __init__.py  add_executable.py  add_library.py  add_xxx.py  break.py  deprecated.py  external_project.py  fetch_content.py  file.py  foreach.py  install.py  list.py  miscellaneous.py  random.py  set.py  set_target_properties.py  standard_builtins.py  standard_funs.py  standard_modules.py
cmake_format/patches/: 01_file_command_single_kwargs.patch  02-additional-whitespace-features.patch
cmake_format/pypi/: MANIFEST.in  setup.py
cmake_format/templates/: style.css
cmake_format/test/: BUILD  CMakeLists.txt  cmake-format-split-1.py  cmake-format-split-2.py  cmake-format-split1.py  cmake-format-split2.py  cmake-format.json  cmake-format.py  cmake-format.yaml  command_db_test.py  config_include_test.py  screw_users_test.py  test_in.cmake  test_in.latin1.cmake  test_lineend_unix.cmake  test_lineend_win.cmake  test_out.cmake  test_out.latin1.cmake  version_number_test.py
cmake_format/tools/: bump_version.py  create_pseudorelease_tag.py  gen_config_details.py  gen_rtd_requirements.py  generate_missing_parsers.py  get_release_notes.py  parse_cmake_help.py  properties.jinja.py  push_github_release.py  split_help.py  usage_parser.py  variables.jinja.py
cmake_format/vscode_extension/: .gitignore  .vscodeignore  CHANGELOG.md  CMakeLists.txt  README.md  notes.md  package-lock.json  package.json
cmake_format/vscode_extension/images/: cmake-format-logo.xcf
cmake_format/vscode_extension/src/: extension.ts
cmake_lint/: BUILD  CMakeLists.txt  __main__.py  basic_checker.py  gendocs.py  lint_util.py  lintdb.py
cmakelang/: BUILD  CMakeLists.txt  README.rst  __init__.py  annotate.py  config_util.py  configuration.py  genparsers.py
cmlp/: README.md  setup.cfg  setup.py
cmlp/example_inputs/: CMakeLists.txt  CMakeLists_09dy.txt  CMakeLists_0KRF.txt  CMakeLists_0o0Z.txt  CMakeLists_0yGZ.txt  CMakeLists_2mxy.txt  CMakeLists_2p0c.txt  CMakeLists_3BtM.txt  CMakeLists_3HYf.txt  CMakeLists_5RBQ.txt  CMakeLists_7Fq5.txt  CMakeLists_7I87.txt  CMakeLists_7RTP.txt  CMakeLists_7b9K.txt  CMakeLists_8I3s.txt  CMakeLists_99gF.txt  CMakeLists_9msk.txt  CMakeLists_AD7h.txt  CMakeLists_ECZq.txt  CMakeLists_EQpq.txt  CMakeLists_FBD0.txt  CMakeLists_GTGF.txt  CMakeLists_HJit.txt  CMakeLists_IGn5.txt  CMakeLists_IbMN.txt  CMakeLists_Irv0.txt  CMakeLists_KfxI.txt  CMakeLists_L9yy.txt  CMakeLists_MMKn.txt  CMakeLists_MTej.txt  CMakeLists_NJ2p.txt  CMakeLists_O4vl.txt  CMakeLists_OKr9.txt  CMakeLists_OyGw.txt  CMakeLists_SrXG.txt  CMakeLists_V3vF.txt  CMakeLists_VNYG.txt  CMakeLists_Vdod.txt  CMakeLists_VqDH.txt  CMakeLists_W0z7.txt  (+46 more)
doc/: conf.py  find_rst.py
tangent/: CMakeLists.txt
tangent/tooling/: CMakeLists.txt  broadway_run.py  check_pbuilderrc.py  clean_stage.py  cmake_post.py  debhelp.py  export_sparse_subrepo.py  gen_rtd_requirements.py  gendoc.py  generate_style_manifest.py  get_release_notes.py  get_version_from_header.py  get_wheel_name.py  github.py  gtkdoc_helper.py  install_debug_symbols.py  sync_doc_artifacts.py  sync_sparse.py  vscode_varsub.py  write_pypirc.py
tangent/tooling/deploy_keys/: cmake-format.enc  cmake-tools-rtd.enc  cmakelang-docker.enc  cmakelang-precommit.enc  cmakelang-pypi-tokens.json.enc
test/: test_in.cmake  test_out.cmake
(+137 files in other folders)
